# BCNN

./: .gitignore  CMakeLists.txt  main.c
package/: datatypes.h  nn_ops.h  ops.h  quantize_ops.h
